--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-vector-icons": "^9.2.0",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
