--- a/package.json
+++ b/package.json
@@ -10,14 +10,27 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "formik": "^2.2.9",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
+    "qs": "^6.11.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-pure-jwt": "^3.0.1",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-vector-icons": "^9.2.0",
-    "tailwindcss-react-native": "^1.7.10"
+    "react-redux": "^8.0.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
+    "tailwindcss-react-native": "^1.7.10",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
