--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "qs": "^6.11.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-image-picker": "^4.10.0",
     "react-native-pure-jwt": "^3.0.1",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "tailwindcss-react-native": "^1.7.10",
     "yup": "^0.32.11"
