--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,7 +6,7 @@ install! 'cocoapods', :deterministic_uuids => false
 
 production = ENV["PRODUCTION"] == "1"
 
-target 'sakuin' do
+target 'Sakuin' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -23,7 +23,7 @@ target 'sakuin' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'sakuinTests' do
+  target 'SakuinTests' do
     inherit! :complete
     # Pods for testing
   end
