--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sakuin",
+  "name": "Sakuin",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -24,6 +24,7 @@
     "react-native": "0.69.4",
     "react-native-image-picker": "^4.10.0",
     "react-native-pure-jwt": "^3.0.1",
+    "react-native-rename": "^2.9.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-vector-icons": "^9.2.0",
