--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -38,3 +38,8 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
 newArchEnabled=false
+
+MYAPP_UPLOAD_STORE_FILE=sakuin.keystore
+MYAPP_UPLOAD_KEY_ALIAS=sakuin
+MYAPP_UPLOAD_STORE_PASSWORD=sakuin
+MYAPP_UPLOAD_KEY_PASSWORD=sakuin
